# AI-Generated-Games

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  unity-build.yml
AI/asset_pipeline/: ai_texture_generator.py  asset_downloader.py
AI/engine_evolution/: benchmark_engine.py  evolve_engine.py
AI/game_generator/: generate_cpp_game.py  generate_game_design.py
AI/world_generation/: terrain_generator.py
Game/: main.cpp
